# NeoStudio

./: .gitignore  CMakeLists.txt  README  README.md
AFLs/: ZS2EU1.AFL  ZS2EU2.AFL  ZS2JP1.AFL  ZS2JP2.AFL  ZS2US1.AFL  ZS2US2.AFL
Sample/: Goku_0_1p.pak  Jeice_1p.pak
assets/: char-list.txt  pak-sections.txt
assets/ui/: Dark.qss  Light.qss
src/: debug.cpp  debug.h  fileparse.cpp  flagbyte.h  main.cpp  neo_info.h  options.cpp  options.h  pakcontrols.cpp  pakcontrols.h  qt_includes.h
src/pak_filesystem/: generalparameters.cpp  generalparameters.h  kiparameters.cpp  kiparameters.h  meleeparameters.cpp  meleeparameters.h  movementparameters.cpp  movementparameters.h  pakcontrols.cpp  pakcontrols.h  parameterfile.h
src/ui/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  generalframe.cpp  generalframe.h  generalframe.ui  neostudio.cpp  neostudio.h  neostudio.ui
src/ui/editors/: charparamframe.cpp  charparamframe.h  charparamframe.ui  skilllistframe.cpp  skilllistframe.h  skilllistframe.ui
src/ui/menu/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  characterselectiondialog.cpp  characterselectiondialog.h  characterselectiondialog.ui  datselectiondialog.cpp  datselectiondialog.h  datselectiondialog.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui  sectionselectiondialog.cpp  sectionselectiondialog.h  sectionselectiondialog.ui
src/ui/paramSections/: generalframe.cpp  generalframe.h  generalframe.ui  kiframe.cpp  kiframe.h  kiframe.ui  meleeframe.cpp  meleeframe.h  meleeframe.ui  movementframe.cpp  movementframe.h  movementframe.ui
